--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Next Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar">
@@ -32,6 +36,20 @@
         </ul>
       </div>
     </nav>
+
+    <!--HERO SECTION-->
+    <div class="main">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>NEXT GENERATION</h1>
+          <h2>TECHNOLOGY</h2>
+          <p>See what makes us different.</p>
+          <button class="main__btn"><a href="/">Get Started</a></button>
+        </div>
+        <div class="main__img--container"></div>
+        <img src="images/pic1.svg" alt="pic" id="main__img" />
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
