--- a/index.html
+++ b/index.html
@@ -46,8 +46,25 @@
           <p>See what makes us different.</p>
           <button class="main__btn"><a href="/">Get Started</a></button>
         </div>
-        <div class="main__img--container"></div>
-        <img src="images/pic1.svg" alt="pic" id="main__img" />
+        <div class="main__img--container">
+          <img src="images/pic1.svg" alt="pic" id="main__img" />
+        </div>
+      </div>
+    </div>
+    <!--Services Section-->
+    <div class="services">
+      <h1>See what the hype is about</h1>
+      <div class="services__container">
+        <div class="services__card">
+          <h2>Experience Bliss</h2>
+          <p>AI Powered Technology</p>
+          <button>Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Are you Ready</h2>
+          <p>Take the leap</p>
+          <button>Get Started</button>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
